@@ -1,4 +1,11 @@
-$Id: ChangeLog,v 1.184 2005/03/13 13:41:04 haraldkipp Exp $
+$Id: ChangeLog,v 1.185 2005/03/24 14:31:59 freckle Exp $
+
+2005-03-21  Matthias Ringwald <mringwal@.inf.ethz.ch>
+
+	* configure, include/unidst.h: added creation of include/unistd_orig.h
+	Added NUT_ wrapper for nut's unistd.h functions. Use <unistd_orig.h>
+	instead of "/usr/include/unistd.h". Relevant for unix emulation only.
+
 
 2005-03-13  Harald Kipp  <harald.kipp@egnite.de>
 
